# red-siren

./: .dockerignore  .gitignore  Cargo.toml  Crux.toml  Dioxus.toml  Dockerfile  Procfile  README.md  env-Dockerfile  heroku.yml  rust-toolchain.toml
.github/workflows/: rust.yml
Android/: .gitignore  build.gradle  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/core/: CMakeLists.txt  build.gradle
Android/shared/: CMakeLists.txt  build.gradle
app_core/: Cargo.toml
app_core/src/: app.rs  instance.rs  lib.rs
app_core/src/app/: animate.rs  instrument.rs  intro.rs  play.rs  tuner.rs
app_core/src/app/instrument/: config.rs  keyboard.rs  layout.rs  node.rs  string.rs
app_core/src/app/instrument/snapshots/: app_core__app__instrument__config__tests__config_snapshot_by_rand_screen.snap
app_core/src/app/intro/: animation.rs
app_core/src/app/tuner/: chart.rs
app_core/src/geometry/: line.rs  rect.rs
app_core/src/geometry/snapshots/: shared__geometry__flex__test__nested_flex.snap  shared__geometry__flex__test__simple_flex.snap
app_core/tests/: layout.rs
aucore/: Cargo.toml
aucore/src/: app.rs  capture.rs  instance.rs  lib.rs  resolve.rs  streamer.rs  system.rs
aucore/src/streamer/: android_oboe.rs  ios_coreaudio.rs
bindgen/: Cargo.toml  uniffi.toml
bindgen/bindgen.xcodeproj/: project.pbxproj
bindgen/src/: ffirs.udl  lib.rs
iOS/: Info-cdylib.plist  Podfile  project.yml
iOS/CatFacts.xcodeproj/: project.pbxproj
iOS/CatFacts.xcodeproj/project.xcworkspace/xcuserdata/anvlkv.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/RedSiren/: AboutView.swift  AnimationClock.swift  ContentView.swift  Core.swift  Info.plist  InstrumentView.swift  Intro.storyboard  IntroView.swift  Launch Screen.storyboard  MenuView.swift  Playback.swift  RedCardView.swift  RedSirenApp.swift  TunerView.swift  core.swift  http.swift
iOS/RedSiren.xcodeproj/: project.pbxproj
iOS/RedSiren.xcodeproj/project.xcworkspace/xcuserdata/anvlkv.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/RedSiren.xcodeproj/xcshareddata/xcschemes/: RedSiren.xcscheme
iOS/RedSiren.xcworkspace/: contents.xcworkspacedata
iOS/RedSiren/Assets.xcassets/AccentColor.colorset/: Contents.json
iOS/RedSiren/Assets.xcassets/Main.colorset/: Contents.json
iOS/RedSiren/Assets.xcassets/Muted.colorset/: Contents.json
iOS/RedSiren/Assets.xcassets/Primary.colorset/: Contents.json
iOS/RedSiren/Assets.xcassets/Rosarivo-Italic.dataset/: Contents.json
iOS/RedSiren/Assets.xcassets/Rosarivo-Regular.dataset/: Contents.json
iOS/RedSiren/Assets.xcassets/Shine.imageset/: Contents.json
iOS/RedSiren/Assets.xcassets/Siren.imageset/: Contents.json
iOS/RedSiren/Assets.xcassets/Sun.imageset/: Contents.json
iOS/SimpleCounter.xcodeproj/: project.pbxproj
red-siren-lib/: Cargo.toml  input.css  tailwind.config.js
red-siren-lib/src/: clock.rs  lib.rs  play.rs  splash.rs
red-siren-web/: Cargo.toml  Dioxus.toml
red-siren-web/src/: main.rs
red-siren-web/static/_dioxus/ws/index/: 65467001.html
shared/: Cargo.toml  uniffi.toml
shared/shared.xcodeproj/: project.pbxproj
shared/shared.xcodeproj/xcuserdata/anvlkv.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: app.rs  instance.rs  lib.rs
shared/src/app/: animate.rs  instrument.rs  intro.rs  navigate.rs  play.rs  tuner.rs
shared/src/app/instrument/: config.rs  keyboard.rs  layout.rs  node.rs  string.rs
shared/src/app/instrument/snapshots/: shared__app__instrument__config__tests__config_snapshot_by_rand_screen.snap  shared__app__instrument__config__tests__size: 0.snap  shared__app__instrument__config__tests__size: 1.snap  shared__app__instrument__config__tests__size: 10.snap  shared__app__instrument__config__tests__size: 11.snap  shared__app__instrument__config__tests__size: 12.snap  shared__app__instrument__config__tests__size: 13.snap  shared__app__instrument__config__tests__size: 14.snap  shared__app__instrument__config__tests__size: 16.snap  shared__app__instrument__config__tests__size: 17.snap  shared__app__instrument__config__tests__size: 18.snap  shared__app__instrument__config__tests__size: 19.snap  shared__app__instrument__config__tests__size: 2.snap  shared__app__instrument__config__tests__size: 20.snap  shared__app__instrument__config__tests__size: 22.snap  shared__app__instrument__config__tests__size: 24.snap  shared__app__instrument__config__tests__size: 25.snap  shared__app__instrument__config__tests__size: 26.snap  shared__app__instrument__config__tests__size: 28.snap  shared__app__instrument__config__tests__size: 29.snap  shared__app__instrument__config__tests__size: 3.snap  shared__app__instrument__config__tests__size: 4.snap  shared__app__instrument__config__tests__size: 6.snap  shared__app__instrument__config__tests__size: 8.snap  shared__app__instrument__config__tests__size: 9.snap
shared/src/app/intro/: animation.rs
shared/src/geometry/: line.rs  mod.rs  rect.rs
shared/tests/: layout.rs
shared/tests/snapshots/: layout__creates_layout_from_config.snap
shared_types/: Cargo.toml  build.rs
shared_types/typegen_extensions/swift/: Package.swift
src/: main.rs
typegen/: Cargo.toml  build.rs
typegen/typegen_extensions/swift/: Package.swift
typegen/typegen_extensions/typescript/: package.json  tsconfig.json
uniffi-bindgen/: Cargo.toml  build.rs
uniffi-bindgen/src/: lib.rs
uniffi-bindgen/uniffi-bindgen.xcodeproj/: project.pbxproj
web-leptos/: .gitignore  Cargo.toml  Dockerfile  index.html  tailwind.config.js
web-leptos/src/: app.rs  core.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
web-leptos/src/app/: about.rs  core.rs  core_bindings.rs  instrument.rs  intro.rs  menu.rs  playback.rs  red_card.rs  tuner.rs
web-leptos/src/app/instrument/: button.rs  string.rs  track.rs
web-leptos/src/util/: dpi.rs  dppx.rs  mod.rs
web-leptos/style/: main.scss
web-leptos/worklet/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-leptos/worklet/src/: Crypto.js  TextEncoder.js  bridge.ts  core.ts  lib.ts  main.ts  node.ts  worklet.ts
(+30 files in other folders)
