[workspace]
members = ["shared", "shared_types", "web-leptos"]
resolver = "1"

[workspace.package]
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
repository = "https://github.com/anvlkv/red-siren"
edition = "2021"
license = "CC0 1.0 Universal"
rust-version = "1.67"
keywords = ["music", "game"]

[workspace.dependencies]
anyhow = "1.0.75"
serde = "1.0.189"
log = "0.4"
wasm-bindgen = "0.2.88"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"