[workspace]
members = ["shared", "shared_types", "web-leptos"]
resolver = "1"

[workspace.package]
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
repository = "https://github.com/anvlkv/red-siren"
edition = "2021"
license = "CC0 1.0 Universal"
rust-version = "1.67"
keywords = ["music", "game"]

[workspace.dependencies]
anyhow = "1.0.75"
serde = "1.0.189"
log = "0.4"
mint = "0.5.9"
wasm-bindgen = "0.2.88"
# crux_core = "0.6"
# crux_http = "0.4"
# crux_kv = "0.1"
# crux_macros = "0.3"
# crux_platform = "0.1"
# crux_time = "0.1"
crux_core = {path="../crux/crux_core"} #"0.6"
crux_http = {path="../crux/crux_http"} #"0.4"
crux_kv = {path="../crux/crux_kv"} #"0.1"
crux_macros = {path="../crux/crux_macros"} #"0.3"
crux_platform = {path="../crux/crux_platform"} #"0.1"
crux_time = {path="../crux/crux_time"} #"0.1"
insta = { version = "1.33.0", features = ["yaml"] }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package]
insta = {opt-level = 3}
similar = {opt-level = 3}
