[workspace]
members = ["app_core", "typegen", "web-leptos", "aucore", "bindgen"]
resolver = "1"

[workspace.package]
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
repository = "https://github.com/anvlkv/red-siren"
edition = "2021"
version = "0.1.0"
license = "CC0 1.0 Universal"
rust-version = "1.67"
keywords = ["music", "game"]

[workspace.dependencies]
anyhow = "1.0.75"
serde = "1.0.189"
log = "0.4.20"
mint = "0.5.9"
wasm-bindgen = "0.2.88"
uniffi = "0.25.3"
# crux_core = "0.6"
# crux_http = "0.4"
# crux_kv = "0.1"
# crux_macros = "0.3"
# crux_platform = "0.1"
# crux_time = "0.1"
crux_core = {git="https://github.com/anvlkv/crux.git", package = "crux_core"}
crux_http = {git="https://github.com/anvlkv/crux.git", package = "crux_http"}
crux_kv = {git="https://github.com/anvlkv/crux.git", package = "crux_kv"}
crux_macros = {git="https://github.com/anvlkv/crux.git", package = "crux_macros"}
crux_platform = {git="https://github.com/anvlkv/crux.git", package = "crux_platform"}
crux_time = {git="https://github.com/anvlkv/crux.git", package = "crux_time"}
# crux_core = { path = "../crux/crux_core" }
# crux_http = { path = "../crux/crux_http" }
# crux_kv = { path = "../crux/crux_kv" }
# crux_macros = { path = "../crux/crux_macros" }
# crux_platform = { path = "../crux/crux_platform" }
# crux_time = { path = "../crux/crux_time" }

insta = { version = "1.34.0", features = ["yaml"] }
lazy_static = "1.4.0"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }
