[package]
name = "aucore"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "aucore"


[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
crux_core = { workspace = true }
crux_http = { workspace = true }
crux_kv = { workspace = true }
crux_macros = { workspace = true }
crux_platform = { workspace = true }
crux_time = { workspace = true }
derive_more = "0.99.17"
lazy_static = "1.4.0"
serde = { workspace = true, features = ["derive"], version = "1.0.163" }
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"
wasm-bindgen = "0.2.86"
log = "0.4.17"
# project
shared = { path = "../shared", features = ["worklet"] }
fundsp = { version = "0.15.0", default-features = false }
futures = { version = "0.3.28", features = ["executor", "thread-pool"] }
# platforms
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", optional = true }
#android
android_logger = { version = "0.13.1", optional = true }
oboe = { version = "0.5.0", features = ["shared-link"], optional = true }
#ios
oslog = { version = "0.2.0", optional = true }
coreaudio-rs = { version = "0.11.3", optional = true }

[features]
browser = ["shared/browser", "console_error_panic_hook", "console_log"]
ios = ["shared/ios", "coreaudio-rs", "oslog"]
android = ["shared/android", "android_logger", "oboe"]
typegen = ["shared/typegen"]

[dev-dependencies]
assert_let_bind = "0.1.1"
insta = { workspace = true }
