[package]
name = "bindgen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }


[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "ffirs"

[[bin]]
name = "bindgen"

[dependencies]
uniffi = { workspace = true }
app_core = { path = "../app_core"}
aucore = { path = "../aucore" }
futures = { version = "0.3.28"}
log = { workspace = true}
cfg-if = "1"

[features]
default=["app_core/instance"]
ios=["app_core/ios", "aucore/ios"]
android=["app_core/android", "aucore/android"]

[target.bindgen.dependencies]
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }