[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = {workspace = true}

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
crux_core = "0.6"
crux_http = "0.4"
crux_kv = "0.1"
crux_macros = "0.3"
crux_platform = "0.1"
crux_time = "0.1"
derive_more = "0.99.17"
keyframe = { version = "1.1.1" }
keyframe_derive = "1.0.0"
lazy_static = "1.4.0"
mint = { version = "0.5.9", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
uniffi = "0.25.0"
url = "2.4.1"
uuid = { version = "1.5.0", features = ["v4", "wasm-bindgen", "js"] }
wasm-bindgen = "0.2.88"
log = { workspace = true }

[dev-dependencies]
assert_let_bind = "0.1.1"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.25.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
