[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]
android = ["android_logger"]
ios = ["oslog"]

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
crux_core.workspace = true
crux_http.workspace = true
crux_kv.workspace = true
crux_macros.workspace = true
crux_platform.workspace = true
crux_time.workspace = true
derive_more = "0.99.17"
keyframe = { version = "1.1.1" }
keyframe_derive = "1.0.0"
lazy_static = "1.4.0"
mint = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
uniffi = "0.25.0"
url = "2.4.1"
wasm-bindgen = { workspace = true }
log = { workspace = true }
hecs = { version = "0.10.4", features = ["serde", "macros"] }
android_logger = { version = "0.13.3", optional = true }
oslog = { version = "0.2.0", optional = true }
num-integer = "0.1.45"

[dev-dependencies]
assert_let_bind = "0.1.1"
insta = { workspace = true }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.25.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
