[package]
name = "shared"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]
android = ["android_logger"]
ios = ["oslog"]
worklet = []
instance = []
browser = ["console_error_panic_hook", "console_log"]

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
crux_core = { workspace = true }
crux_http = { workspace = true }
crux_kv = { workspace = true }
crux_macros = { workspace = true }
crux_platform = { workspace = true }
crux_time = { workspace = true }
derive_more = "0.99.17"
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"
wasm-bindgen = "0.2.86"
log = { workspace = true }
# project specific
keyframe = "1.1.1"
keyframe_derive = "1.0.0"
mint = { workspace = true, features = ["serde"] }
num-integer = "0.1.45"
hecs = { version = "0.10.3", features = ["serde", "macros"] }
# platforms
cfg-if = "1.0.0"
android_logger = { version = "0.13.1", optional = true }
oslog = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", optional = true }
futures = "0.3.29"

[dev-dependencies]
assert_let_bind = "0.1.1"
insta = { workspace = true }


