[package]
name = "uniffi-bindgen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }


[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "ffirs"

[[bin]]
name = "uniffi-bindgen"

[dependencies]
uniffi = { workspace = true }
shared = { path = "../shared", features = ["instance"] }
aucore = { path = "../aucore" }

[features]
ios=["shared/ios", "aucore/ios"]
android=["shared/android", "aucore/android"]

[target.uniffi-bindgen.dependencies]
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }